@@ -17,7 +17,6 @@
  */
 package io.ecocode.java.checks.environment.sobriety;
 
-import com.google.common.collect.ImmutableList;
 import io.ecocode.java.checks.helpers.TreeHelper;
 import org.sonar.api.utils.log.Logger;
 import org.sonar.api.utils.log.Loggers;
@@ -49,7 +48,7 @@ public class ThriftyGeolocationMinDistanceRule extends IssuableSubscriptionVisit
 
     @Override
     public List<Tree.Kind> nodesToVisit() {
-        return ImmutableList.of(Tree.Kind.METHOD_INVOCATION);
+        return List.of(Tree.Kind.METHOD_INVOCATION);
     }
 
     @Override
@@ -70,7 +69,7 @@ public class ThriftyGeolocationMinDistanceRule extends IssuableSubscriptionVisit
                         TreeHelper.literalValueControl(mit.arguments().get(1), treesToReport, ARGUMENT_VALUE_TO_CONTROL);
                     }
                 } catch (Exception e) {
-                    LOG.debug(String.format("{} Cannot evaluate requestLocationUpdates(...) argument value.", getClass().getName()));
+                    LOG.debug(String.format("%s Cannot evaluate requestLocationUpdates(...) argument value.", getClass().getName()));
                     LOG.debug("Exception: {}", e.getMessage(), e);
                 }
             }
